--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -15,6 +15,8 @@
        <#list list as student>
        <tr>
          <td>${student.id}}</td>
+           <td>${student.studentName}</td>
+           <td>${student.grade}</td>
        </tr>
      </table>
 
